# Capture_From_Camera

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
source/: main.cpp
